[package]
name = "nock"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
keywords = ["vm"]
description = "A stateless virtual machine"
repository = "https://github.com/rsaarelm/nock-rs"
license = "MIT"

[dependencies]
num = "0.1"

[[example]]
name = "repl"
path = "examples/repl.rs"

[[example]]
name = "strings"
path = "examples/strings.rs"
